--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>@ng-apimock/dev-interface</title>
-    <base href="/">
+    <base href="/" id="baseHref">
+    <script>
+        (function() {
+            document.getElementById('baseHref').href = '/' + window.location.pathname.split('/')[1] + "/";
+        })();
+    </script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
