--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
 </head>
 <body>
-<app-root></app-root>
+<apimock-root></apimock-root>
 </body>
 </html>
